[package]
name = "chunked-wal"
version = "0.2.0"
edition = "2024"

authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>",
]
categories = ["algorithms", "data-structures"]
description = "Chunked write-ahead log implementation"
documentation = "https://docs.rs/chunked-wal"
homepage = "https://github.com/drmingdrmer/chunked-wal"
keywords = ["wal", "log", "storage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/chunked-wal"

[dependencies]
base2histogram = { version = "0.2.3" }
byteorder = { version = "1.5.0" }
codeq = { version = "0.6.0" }
fs2 = "0.4.3"
log = "0.4.22"
thiserror = { version = "1.0.64" }

[dev-dependencies]
tempfile = { version = "3.4.0" }
